[server-apply] adds data db service
