# server_apply/src/swagger.json
@@ -20,11 +20,12 @@
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
+  
   "paths": {
     "/catagories": {
       "post": {
         "tags": ["Catagory"],
-        "summary": "Checks the input product from the user",
+        "summary": "Add catagory",
         "parameters": [
           {
             "name": "input",
@@ -46,6 +47,45 @@
                 "parentSku": {
                   "type": "string"
                 }                  
+              },
+              "required": []
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Returns the result",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+
+    "/data": {
+      "post": {
+        "tags": ["Data"],
+        "summary": "Add data",
+        "parameters": [
+          {
+            "name": "input",
+            "in": "body",
+            "description": "Product we want to check",
+            "schema": {
+              "$schema": "http://json-schema.org/draft-04/schema#",
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "catagory": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                }                 
               },
               "required": []
             }
